crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-cayenne[file]-indexes_region_pk_0_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: region_pk_0"
---
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                 |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Filter: region.r_regionkey = Int32(0)                                                                                                                                                                                                                                                                |
|               |   TableScan: region projection=[r_regionkey, r_name, r_comment], partial_filters=[region.r_regionkey = Int32(0)]                                                                                                                                                                                     |
| physical_plan | SchemaCastScanExec                                                                                                                                                                                                                                                                                   |
|               |   CayenneAccelerationExec                                                                                                                                                                                                                                                                            |
|               |     BytesProcessedExec                                                                                                                                                                                                                                                                               |
|               |       DataSourceExec: file_groups={1 group: [[/data/region/<CAYENNE_PATH>.vortex]]}, projection=[r_regionkey, r_name, r_comment], file_type=vortex, predicate: r_regionkey@0 = 0 |
|               |                                                                                                                                                                                                                                                                                                      |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
